 * Fix: Editing setting object with no site configured no longer crashes (Harm Zeinstra)
 * Fix: Creating a new object with inlines while mandatory fields are empty no longer crashes (Bertrand Bordage)
 * Fix: Localization of image and apps verbose names
 * Fix: Draftail editor no longer crashes after deleting image/embed using DEL key (Thibaud Colas)


2.0.1 (xx.xx.xxxx) - IN DEVELOPMENT
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

 * Added error notification when running the `wagtail` command on Python <3.4 (Matt Westcott)
 * Fix: Draftail now supports features specified via the `WAGTAILADMIN_RICH_TEXT_EDITORS` setting (Todd Dembrey)
 * Fix: Password reset form no longer indicates whether the email is recognised, as per standard Django behaviour (Bertrand Bordage)
 * Fix: `UserAttributeSimilarityValidator` is now correctly enforced on user creation / editing forms (Tim Heap)
 * Fix: Editing setting object with no site configured no longer crashes (Harm Zeinstra)
 * Fix: Creating a new object with inlines while mandatory fields are empty no longer crashes (Bertrand Bordage)


2.0 (28.02.2018)
~~~~~~~~~~~~~~~~

 * Added support for Django 2.0 (Matt Westcott, Karl Hobley, LB (Ben Johnston), Mads Jensen)
 * Reorganised module paths (Karl Hobley, Matt Westcott)
 * Replaced the hallo.js rich text editor with Draftail (Thibaud Colas, Loïc Teixeira, Matt Westcott)
 * Removed support for Python 2.7, Django 1.8 and Django 1.10
 * Removed support for Elasticsearch 1.x
 * Added the ability to schedule updates to existing published pages (Patrick Woods)
 * Moved Wagtail API v1 implementation (`wagtail.contrib.api`) to an external app (https://github.com/wagtail/wagtailapi_legacy) (Karl Hobley)
 * The page chooser now searches all fields of a page, instead of just the title (Bertrand Bordage)
 * Implement ordering by date in form submission view (LB (Ben Johnston))
 * Elasticsearch scroll API is now used when fetching more than 100 search results (Karl Hobley)